Spilt Sidenote widget into Note and Hang

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -104,9 +104,9 @@
               <li><a href="#flat">横並び</a></li>
               <li><a href="#float">右寄せ</a></li>
               <li><a href="#hang">はみ出し</a></li>
+              <li><a href="#note">注</a></li>
               <li><a href="#posts">投稿一覧</a></li>
               <li><a href="#seealso">参照</a></li>
-              <li><a href="#sidenote">傍注</a></li>
             </ol>
           </li>
         </ol>
@@ -641,6 +641,33 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
   &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
 &lt;/figure&gt;
 </code></pre>
+      </section>
+
+      <section id="note" class="section">
+        <h1>注</h1>
+
+        <aside class="note">
+          <p>Consequat dolor nostrud occaecat tempor culpa sunt do laboris exercitation elit reprehenderit et ex. Sint nulla id dolore veniam ea in dolore. In occaecat laborum anim aliqua mollit deserunt reprehenderit culpa do ea commodo.</p>
+        </aside>
+
+        <p>Dolor proident pariatur incididunt voluptate laborum reprehenderit consectetur et id incididunt. Reprehenderit aliquip ullamco cillum ipsum eiusmod proident sunt ex in elit velit magna. Occaecat velit nulla occaecat elit in occaecat consequat deserunt quis. Velit est proident anim pariatur consequat. Exercitation veniam non voluptate ipsum fugiat adipisicing.</p>
+
+        <pre><code class="language-html">&lt;aside <mark>class=&quot;note&quot;</mark>&gt;
+  &lt;p&gt;...&lt;/p&gt;
+&lt;/aside&gt;
+</code></pre>
+
+        <p>飛び出しウィジェットと組み合わせることで、傍注とすることができます。</p>
+
+        <aside class="note hang">
+          <p>In vitae pretium risus. Vivamus ac ligula non ligula rhoncus sagittis. Fusce velit sem, congue in vestibulum sed, vestibulum sed nibh.</p>
+        </aside>
+
+        <p>Proin et odio eros. Vivamus gravida pulvinar aliquet. Quisque convallis sodales mauris sed bibendum. Vestibulum eros sem, pharetra eleifend blandit nec, elementum convallis neque. Aenean pulvinar aliquam augue, blandit pulvinar sapien rhoncus ac. Donec velit diam, vulputate ut elementum sit amet, interdum quis est. Vivamus sed justo mi, quis molestie nulla. In hac habitasse platea dictumst.</p>
+
+        <pre><code class="language-html">&lt;aside <mark>class=&quot;note hang&quot;</mark>&gt;
+  &lt;p&gt;...&lt;/p&gt;
+&lt;/aside&gt;
 </code></pre>
       </section>
 
@@ -681,21 +708,6 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 
         <pre><code class="language-html">&lt;p <mark>class=&quot;seealso&quot;</mark>&gt;Label: &lt;a href=&quot;...&quot;&gt;...&lt;/a&gt;&lt;/p&gt;
 </code></pre>
-      </section>
-
-      <section id="sidenote" class="section">
-        <h1>傍注</h1>
-        <aside class="sidenote">
-          <p>In vitae pretium risus. Vivamus ac ligula non ligula rhoncus sagittis. Fusce velit sem, congue in vestibulum sed, vestibulum sed nibh.</p>
-        </aside>
-
-        <p>Proin et odio eros. Vivamus gravida pulvinar aliquet. Quisque convallis sodales mauris sed bibendum. Vestibulum eros sem, pharetra eleifend blandit nec, elementum convallis neque. Aenean pulvinar aliquam augue, blandit pulvinar sapien rhoncus ac. Donec velit diam, vulputate ut elementum sit amet, interdum quis est. Vivamus sed justo mi, quis molestie nulla. In hac habitasse platea dictumst.</p>
-
-        <pre><code class="language-html">&lt;aside <mark>class=&quot;sidenote&quot;</mark>&gt;
-  &lt;p&gt;...&lt;/p&gt;
-&lt;/aside&gt;
-</code></pre>
-
       </section>
     </main>
 
