Fix example code

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -637,7 +637,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 
         <p>Mauris sagittis tellus magna, sit amet sodales sem bibendum sit amet. Nam pharetra vulputate leo vitae faucibus. Praesent ac semper augue, ut dignissim dolor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean fermentum dui sit amet leo auctor suscipit. Nulla nulla lacus, elementum convallis aliquet eget, tincidunt quis diam. Donec id dictum justo, at blandit ex.</p>
 
-        <pre><code class="language-html">&lt;figure <mark>class=&quot;drop&quot;</mark>&gt;
+        <pre><code class="language-html">&lt;figure <mark>class=&quot;hang&quot;</mark>&gt;
   &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
 &lt;/figure&gt;
 </code></pre>
