Define First as general widget
This widget now can be used in Global Header.

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -101,6 +101,7 @@
           <li>ウィジェット
             <ol>
               <li><a href="#fill">幅いっぱい</a></li>
+              <li><a href="#first">最初</a></li>
               <li><a href="#flat">横並び</a></li>
               <li><a href="#float">右寄せ</a></li>
               <li><a href="#hang">はみ出し</a></li>
@@ -580,6 +581,15 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
   &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
   &lt;figcaption&gt;...&lt;/figcaption&gt;
 &lt;/figure&gt;
+</code></pre>
+      </section>
+
+      <section id="first" class="section">
+        <h1>最初</h1>
+
+        <p class="first">Nostrud ut et officia exercitation ipsum mollit do mollit est irure. Ex voluptate consectetur enim consequat eu aliqua reprehenderit laborum proident eu adipisicing nostrud aliqua esse. Nisi velit culpa exercitation veniam mollit ea amet labore fugiat nulla. Ut elit sunt ut exercitation dolore reprehenderit eiusmod proident anim sunt ullamco sit ullamco.</p>
+
+        <pre><code class="language-html">&lt;p <mark>class=&quot;first&quot;</mark>&gt;...&lt;/p&gt;
 </code></pre>
       </section>
 
