Fix example code

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -704,8 +704,10 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 
         <pre><code class="language-html">&lt;ol <mark>class=&quot;posts&quot;</mark>&gt;
   &lt;li&gt;
-    &lt;div class=&quot;info&quot;&gt;&lt;time class=&quot;date&quot; datetime=&quot;...&quot;&gt;...&lt;/time&gt;
-      · &lt;span class=&quot;tag&quot;&gt;&lt;a href=&quot;...&quot;&gt;Amet&lt;/a&gt;&lt;/span&gt;&lt;/div&gt;
+    &lt;div class=&quot;info&quot;&gt;
+      &lt;time class=&quot;date&quot; datetime=&quot;...&quot;&gt;...&lt;/time&gt;
+    &lt;/div&gt;
+
     &lt;a class=&quot;title&quot; href=&quot;...&quot;&gt;...&lt;/a&gt;&lt;/li&gt;
 &lt;/ol&gt;
 </code></pre>
