--- a/src/css/test.html
+++ b/src/css/test.html
@@ -783,7 +783,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
     <footer class="global-footer" role="contentinfo">
       <p class="footlinks"><a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license">CC BY-NC</a> • <a href="/feed" rel="alternate">RSS</a></p>
 
-      <p id="author" class="byline"><a href="https://kyonagashima.com/" rel="author">KN</a></p>
+      <p class="byline"><a href="https://kyonagashima.com/" rel="author">ながしまきょう</a>が作っています</p>
     </footer>
   </body>
 </html>
