--- a/src/css/test.html
+++ b/src/css/test.html
@@ -141,6 +141,7 @@
             </li>
             <li>クラス名やIDはハイフンつなぎで指定します</li>
             <li>JavaScript等で動的に生成されるコードも上記決め事に従います</li>
+            <li><a href="http://htmlhint.com/">HTMLHint</a>でチェックします</li>
           </ul>
         </section>
 
@@ -169,6 +170,7 @@
                 <li>BEMの思想を流用し、ファイルを作成してブロックを、ネストでエレメントを、<code>&amp;</code>を使ったネストでモディファイアーを表現します</li>
               </ul>
             </li>
+            <li><a href="http://stylelint.io/">Stylelint</a>でチェックします</li>
           </ul>
         </section>
 
@@ -178,6 +180,7 @@
           <ul>
             <li>JavaScriptをUTF-8で書きます</li>
             <li>インデントは半角空白を二文字使います</li>
+            <li><a href="http://eslint.org/">ESLint</a>でチェックします</li>
           </ul>
         </section>
       </section>
