Update Style Guide tagline

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -47,7 +47,7 @@
         </ul>
       </nav>
 
-      <p class="tagline first">このウェブサイトで使われているマークアップやスタイルの解説兼プレビューのページです</p>
+      <p class="tagline first">どのようにマークアップし、どのようにスタイルしているかを確認できるスタイル・ガイドです。このウェブサイトはスタイル・ガイド・ファーストで制作されています。</p>
     </header>
 
     <main class="content" role="main">
