--- a/src/css/test.html
+++ b/src/css/test.html
@@ -19,6 +19,7 @@
     <script async src="../../node_modules/@hail2u/abbread/dist/abbread.js"></script>
     <script defer src="../../node_modules/@hail2u/ellipsis-title/dist/ellipsis-title.js"></script>
     <script async src="../../node_modules/unutm/build/unutm.js"></script>
+    <script defer src="../js/reldate.js"></script>
     <script defer src="../js/toggle-column.js"></script>
     <script defer src="../js/toggle-eyecatch.js"></script>
     <script defer src="../js/toggle-outline.js"></script>
