Add column ratio explanation

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -258,6 +258,8 @@
         <h1>レイアウト</h1>
 
         <p>コンテンツのおさまり具合によってレイアウトが切り替わります。ブラウザーの大きさを変更したりすると、その様子が確認できるでしょう。</p>
+
+        <p>広い画面でのカラム比は<code>1:1.7</code>になっています。この比率は広い画面での行間と同じです。</p>
       </section>
 
       <section id="characters-per-line" class="section">
