Place Characters per Line under Layouts

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -97,8 +97,11 @@
           <li><a href="#fonts">フォント</a></li>
           <li><a href="#colors">カラーパレット</a></li>
           <li><a href="#icons">アイコン</a></li>
-          <li><a href="#layouts">レイアウト</a></li>
-          <li><a href="#characters-per-line">行あたりの文字数</a></li>
+          <li><a href="#layouts">レイアウト</a>
+            <ul>
+              <li><a href="#characters-per-line">行あたりの文字数</a></li>
+            </ul>
+          </li>
           <li>コア
             <ol>
               <li><a href="#sections">セクション</a></li>
@@ -260,14 +263,14 @@
         <p>コンテンツのおさまり具合によってレイアウトが切り替わります。ブラウザーの大きさを変更したりすると、その様子が確認できるでしょう。</p>
 
         <p>広い画面でのカラム比は<code>1:1.7</code>になっています。この比率は広い画面での行間と同じです。</p>
-      </section>
 
-      <section id="characters-per-line" class="section">
-        <h1>行あたりの文字数</h1>
+        <section id="characters-per-line">
+          <h1 class="subheading">行あたりの文字数</h1>
 
-        <p class="line-length">Lorem ipsum dolor sit amet, consectetur adip*iscing elit. Suspendisse moll*is elementum leo sed feugiat.</p>
+          <p class="line-length">Lorem ipsum dolor sit amet, consectetur adip*iscing elit. Suspendisse moll*is elementum leo sed feugiat.</p>
 
-        <p>直前の段落のアスタリスクは45文字目と75文字目に打ってあります。一行の文字数は45–75文字（<code>line-height: 1.5</code>の場合）と言われているので、このアスタリスクが行をまたいでいると適切な文字数で折り返されているということになります。このウェブサイトでは行間が<code>1.7</code>と少し広いことと、Windowsのブラウザーで使われることが多いメイリオが幅が広いことを基準にし、広めに設定しています。</p>
+          <p>直前の段落のアスタリスクは45文字目と75文字目に打ってあります。一行の文字数は45–75文字（<code>line-height: 1.5</code>の場合）と言われているので、このアスタリスクが行をまたいでいると適切な文字数で折り返されているということになります。このウェブサイトでは行間が<code>1.7</code>と少し広いことと、Windowsのブラウザーで使われることが多いメイリオが幅が広いことを基準にし、広めに設定しています。</p>
+        </section>
       </section>
 
       <section id="sections" class="section">
