Generate text size if > full HD

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -193,6 +193,8 @@
 
         <p>広い画面でのカラム比は<code>1:1.7</code>になっています。この比率は広い画面での行間と同じです。</p>
 
+        <p>また、レイアウトが変わるタイミングで適切に文字サイズも変わります。ただしフルHD以上で表示された場合には適切な文字サイズを選定するのが難しい（または面倒くさい）ため、描画領域の横幅から自動生成しています。</p>
+
         <section id="characters-per-line">
           <h1 class="subheading">行あたりの文字数</h1>
 
