Clarify using ES2016

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -774,7 +774,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
           <h1 class="subheading">スクリプト</h1>
 
           <ul>
-            <li>JavaScriptをUTF-8で書きます</li>
+            <li><a href="http://www.ecma-international.org/ecma-262/7.0/">ES2016</a>に従ってUTF-8で書きます</li>
             <li>インデントは半角空白を二文字使います</li>
             <li><a href="http://eslint.org/">ESLint</a>でチェックします</li>
           </ul>
