Add Google+ button to Share

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -83,6 +83,7 @@
           <ul>
             <li><a class="twitter" href="https://twitter.com/intent/tweet?text=Style+Guide+-+About+-+Hail2u.net&amp;url=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F&amp;via=hail2u_">Twitter</a></li>
             <li><a class="facebook" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F">Facebook</a></li>
+            <li><a class="google" href="https://plus.google.com/share?url=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F">Google+</a></li>
             <li><a class="hatena" href="https://b.hatena.ne.jp/add?title=Style+Guide+-+About+-+Hail2u.net&amp;url=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F">はてなブックマーク</a></li>
           </ul>
         </aside>
