--- a/src/css/test.html
+++ b/src/css/test.html
@@ -16,14 +16,14 @@
     <link href="debug.css" media="not print" rel="stylesheet">
     <link href="print.css" media="only print" rel="stylesheet">
 
-    <script async src="../../node_modules/@hail2u/abbread/dist/abbread.js"></script>
-    <script defer src="../../node_modules/@hail2u/ellipsis-title/dist/ellipsis-title.js"></script>
-    <script async src="../../node_modules/unutm/build/unutm.js"></script>
+    <script async src="../js/abbread.js"></script>
+    <script async src="../js/unutm.js"></script>
+    <script defer src="../js/ellipsis-title.js"></script>
     <script defer src="../js/reldate.js"></script>
+    <script defer src="../js/wrapfix.js"></script>
     <script defer src="../js/toggle-column.js"></script>
     <script defer src="../js/toggle-eyecatch.js"></script>
     <script defer src="../js/toggle-outline.js"></script>
-    <script defer src="../js/wrapfix.js"></script>
 
     <meta content="summary_large_image" name="twitter:card">
     <meta content="@hail2u_" name="twitter:site">
