Set line length slightly shorter

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -201,7 +201,7 @@
 
           <p class="line-length">Lorem ipsum dolor sit amet, consectetur adip*iscing elit. Suspendisse moll*is elementum leo sed feugiat.</p>
 
-          <p>直前の段落のアスタリスクは45文字目と75文字目に打ってあります。一行の文字数は45–75文字（<code>line-height: 1.5</code>の場合）と言われているので、このアスタリスクが行をまたいでいると適切な文字数で折り返されているということになります。このウェブサイトでは行間が<code>1.7</code>と少し広いことと、Windowsのブラウザーで使われることが多いメイリオが幅が広いことを基準にし、広めに設定しています。</p>
+          <p>直前の段落のアスタリスクは45文字目と75文字目に打ってあります。一行の文字数は45–75文字（<code>line-height: 1.5</code>の場合）と言われているので、このアスタリスクが行をまたいでいると適切な文字数で折り返されているということになります。</p>
         </section>
       </section>
 
