--- a/src/css/test.html
+++ b/src/css/test.html
@@ -116,8 +116,8 @@
             <ol>
               <li><a href="#fill">幅いっぱい</a></li>
               <li><a href="#flat">横並び</a></li>
-              <li><a href="#float">右寄せ</a></li>
               <li><a href="#hang">はみ出し</a></li>
+              <li><a href="#move">寄せ</a></li>
               <li><a href="#note">注</a></li>
               <li><a href="#pick">おすすめ</a></li>
               <li><a href="#posts">投稿一覧</a></li>
@@ -552,26 +552,33 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 </code></pre>
       </section>
 
-      <section id="float" class="section">
-        <h1>右寄せ</h1>
+      <section id="move" class="section">
+        <h1>寄せ</h1>
 
-        <figure class="float">
+        <figure class="move left">
           <img alt="Placeholder Image" height="180" src="https://unsplash.it/320/180/" width="320">
         </figure>
 
         <p>Nam sapien lacus, suscipit in convallis at, eleifend non orci. Fusce nunc dolor, dictum in mi ut, tempus rutrum metus. Vivamus porttitor ac diam sit amet vulputate. Vestibulum pellentesque lacus varius ligula scelerisque tincidunt. Quisque aliquam orci sed sem consectetur, eu pharetra nisl tempus. Donec in eros consequat, porta nisi vel, porta urna. Aliquam in nunc venenatis, ultricies ipsum ultricies, aliquet urna.</p>
 
-        <p>画像を右寄せした場合、幅はおよそ1/3ほどまで、高さは最大12行分までにそれぞれ制限されます。</p>
+        <p>画像を寄せた場合、幅はおよそ1/3ほどまでに制限されます。</p>
 
-        <figure class="float">
+        <pre><code class="language-html">&lt;figure <mark>class=&quot;move left&quot;</mark>&gt;
+  &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
+&lt;/figure&gt;
+</code></pre>
+
+        <figure class="move right">
           <img alt="Placeholder Image" height="320" src="https://unsplash.it/180/320/" width="180">
         </figure>
 
-        <p>Suspendisse cursus massa ut erat varius, a tempus mi venenatis. Vivamus molestie nibh nec rutrum finibus. Duis egestas hendrerit ultricies. In rutrum lacus at mattis blandit. Etiam sodales est quam, sed venenatis urna sodales feugiat. Curabitur sit amet fermentum metus. Suspendisse luctus, sapien nec pharetra commodo, quam erat rutrum magna, vitae dapibus purus metus vehicula arcu. Mauris faucibus commodo suscipit.</p>
+        <p>Suspendisse cursus massa ut erat varius, a tempus mi venenatis. Vivamus molestie nibh nec rutrum finibus. Duis egestas hendrerit ultricies. In rutrum lacus at mattis blandit.</p>
 
         <p>Quisque in diam eu odio accumsan sodales sit amet in velit. Vestibulum tellus enim, eleifend sit amet commodo id, aliquam et libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ipsum arcu, gravida vitae rutrum nec, lacinia eget lorem. Duis ultrices est odio, vitae dictum lorem rhoncus at. Vivamus vehicula consectetur quam vel placerat. Nunc orci eros, sagittis ut velit lacinia, fringilla blandit libero.</p>
 
-        <pre><code class="language-html">&lt;figure <mark>class=&quot;float&quot;</mark>&gt;
+        <p>高さも12行分ほどまでに制限されます。</p>
+
+        <pre><code class="language-html">&lt;figure <mark>class=&quot;move right&quot;</mark>&gt;
   &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
 &lt;/figure&gt;
 </code></pre>
