Fix color preview mapping

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -142,15 +142,15 @@
         <h1>カラーパレット</h1>
 
         <ul class="colors basic">
-          <li>更に暗い色</li>
-          <li>暗い色</li>
-          <li>暗い色（明るめ）</li>
-          <li>明るい色（暗め）</li>
-          <li>明るい色</li>
-          <li>更に明るい色</li>
+          <li>前景色</li>
+          <li>前景色（暗め）</li>
+          <li>前景色（明るめ）</li>
+          <li>背景色</li>
+          <li>背景色（暗め）</li>
+          <li>背景色（明るめ）</li>
         </ul>
 
-        <ul class="colors variation">
+        <ul class="colors accent">
           <li>プライマリー</li>
           <li>プライマリー（暗め）</li>
           <li>プライマリー（明るめ）</li>
