--- a/src/css/test.html
+++ b/src/css/test.html
@@ -141,22 +141,16 @@
       <section id="colors" class="section">
         <h1>カラーパレット</h1>
 
-        <ul class="colors basic">
+        <ul class="colors">
           <li>前景色</li>
           <li>前景色（暗め）</li>
           <li>前景色（明るめ）</li>
           <li>背景色</li>
           <li>背景色（暗め）</li>
           <li>背景色（明るめ）</li>
-        </ul>
-
-        <ul class="colors accent">
-          <li>プライマリー</li>
-          <li>プライマリー（暗め）</li>
-          <li>プライマリー（明るめ）</li>
-          <li>セカンダリー</li>
-          <li>セカンダリ―（暗め）</li>
-          <li>セカンダリ―（明るめ）</li>
+          <li>アクセント</li>
+          <li>アクセント（暗め）</li>
+          <li>アクセント（明るめ）</li>
         </ul>
       </section>
 
