Clarify word: Style Guide

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -48,7 +48,7 @@
         </ul>
       </nav>
 
-      <p class="tagline">どのようにマークアップし、どのようにスタイルしているかを確認できるスタイル・ガイドです。このウェブサイトはスタイル・ガイド・ファーストで制作されています。</p>
+      <p class="tagline">どのようにマークアップし、どのようにスタイルしているかを確認できる<a href="https://en.wikipedia.org/wiki/Style_guide">スタイル・ガイド</a>です。このウェブサイトはスタイル・ガイド・ファーストで制作されています。</p>
     </header>
 
     <main class="content" role="main">
@@ -93,7 +93,7 @@
         <h1>目次</h1>
 
         <ol>
-          <li><a href="#introduction">このStyle Guideについて</a></li>
+          <li><a href="#introduction">このスタイル・ガイドについて</a></li>
           <li><a href="#icons">アイコン</a></li>
           <li><a href="#colors">カラーパレット</a></li>
           <li><a href="#fonts">フォント</a></li>
