--- a/src/css/test.html
+++ b/src/css/test.html
@@ -63,12 +63,12 @@
           <a href="../img/about/how-i-markup-and-style-this-website.svg"><img alt="How I Markup &amp; Style This Website" height="1440" src="../img/about/how-i-markup-and-style-this-website.svg" width="2560"></a>
         </figure>
 
-        <p>マークアップはHTMLのソースを、スタイルについてはこのページで参照されている非圧縮のCSSファイルを参照してください。このページに限ってはマークアップにおかしいところが多々ありますが、その多くはプレビューを作る上でのやむを得ない事情によるものです。</p>
+        <p>マークアップはHTMLのソースを、スタイルについてはこのページで参照されている非圧縮の<abbr title="Cascading Style Sheet">CSS</abbr>ファイルを参照してください。このページに限ってはマークアップにおかしいところが多々ありますが、その多くはプレビューを作る上でのやむを得ない事情によるものです。</p>
 
         <section>
           <h1 class="subheading">デバッグ</h1>
 
-          <p>レイアウトの位置確認のために、空いているところをダブルクリックするとグリッドと要素のアウトラインをトグルすることができます。グリッドはCSSグラデーションを利用した簡単なもののため、描画領域の幅によっては数ピクセル程ずれることがあります。</p>
+          <p>レイアウトの位置確認のために、空いているところをダブルクリックするとグリッドと要素のアウトラインをトグルすることができます。グリッドは<abbr>CSS</abbr>グラデーションを利用した簡単なもののため、描画領域の幅によっては数ピクセル程ずれることがあります。</p>
 
           <p>また、最初の見出しをクリックすることでホームでのスタイルへの切り替えを、日付をクリックすることでアイキャッチ画像の切り替えを、それぞれ行うことができます。</p>
         </section>
@@ -228,7 +228,7 @@
         <section>
           <h1 class="subheading">小見出し</h1>
 
-          <p>セクション内の小見出しでも<code>h1</code>要素を使います。必ず<code>section</code>要素を組み合わせることで、CSSでスタイリングできるようにしています。</p>
+          <p>セクション内の小見出しでも<code>h1</code>要素を使います。必ず<code>section</code>要素を組み合わせることで、<abbr>CSS</abbr>でスタイリングできるようにしています。</p>
 
           <pre><code class="language-html">&lt;section&gt;
   &lt;h1&gt;...&lt;/h1&gt;
