--- a/src/css/test.html
+++ b/src/css/test.html
@@ -160,7 +160,7 @@
         <table>
           <tr>
             <th rowspan="3">本文</th>
-            <td class="font-family-body">San FranciscoまたはSegoe UI</td>
+            <td class="font-family-body"><a href="https://en.wikipedia.org/wiki/San_Francisco_(2014_typeface)">San Francisco</a>または<a href="https://en.wikipedia.org/wiki/Segoe">Segoe UI</a></td>
           </tr>
           <tr>
             <td class="font-family-body">The quick brown fox jumps over the lazy dog.</td>
@@ -170,7 +170,7 @@
           </tr>
           <tr>
             <th rowspan="3">コード</th>
-            <td class="font-family-pre">MenloまたはConsolas</td>
+            <td class="font-family-pre"><a href="https://en.wikipedia.org/wiki/Menlo_(typeface)">Menlo</a>または<a href="https://en.wikipedia.org/wiki/Consolas">Consolas</a></td>
           </tr>
           <tr>
             <td class="font-family-pre">The quick brown fox jumps over the lazy dog.</td>
