Update CSS coding rules

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -766,9 +766,13 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
             <li>Sass
               <ul>
                 <li>BEMの思想を流用し、ファイルを作成してブロックを、ネストでエレメントを、<code>&amp;</code>を使ったネストでモディファイアーを表現します</li>
+                <li>変数はなるべく局所で定義します</li>
+                <li>関数は使いません</li>
+                <li>ミックスインは使いません</li>
+                <li>プレースホルダー・セレクターは使いません</li>
               </ul>
             </li>
-            <li><a href="http://stylelint.io/">Stylelint</a>でチェックします</li>
+            <li><a href="http://stylelint.io/">stylelint</a>でチェックします</li>
           </ul>
         </section>
 
