Change license to CC-BY

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -7,7 +7,7 @@
 
     <title>スタイル・ガイド - いろいろ - Hail2u.net</title>
 
-    <link href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license">
+    <link href="https://creativecommons.org/licenses/by/4.0/" rel="license">
     <link href="https://hail2u.net/about/style-guide/" rel="canonical">
     <link href="https://hail2u.net/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
     <link href="https://hail2u.net/feed" rel="alternate" type="application/rss+xml">
@@ -797,7 +797,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
     </aside>
 
     <footer class="global-footer" role="contentinfo">
-      <p class="footlinks"><a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license">CC BY-NC</a> • <a href="/feed" rel="alternate">RSS</a></p>
+      <p class="footlinks"><a href="https://creativecommons.org/licenses/by/4.0/" rel="license">CC BY-NC</a> • <a href="/feed" rel="alternate">RSS</a></p>
 
       <p class="byline"><a href="https://kyonagashima.com/" rel="author">ながしまきょう</a>が作っています</p>
     </footer>
