--- a/src/css/test.html
+++ b/src/css/test.html
@@ -415,9 +415,9 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
       <section id="text-level-semantics" class="section">
         <h1>語・句・文単位での意味付け</h1>
 
-        <p>段落内では様々な意味づけを行うマークアップを使用しています。主に使うものは<a href="#">ハイパーリンク</a>を始め、<em>強調</em>や<strong>より強い強調</strong>であったり、<cite>出典元の明示</cite>や<q>インラインでの引用</q>、<abbr title="World Wide Web">WWW</abbr>等の略語、<code>&lt;code&gt;</code>や<var>variable</var>等のコード断片、<kbd>Enter</kbd>などのキー入力、<mark>単なるマーク</mark>など、あまり逸脱しない形でスタイルしています。</p>
+        <p>段落内では様々な意味づけを行うマークアップを使用しています。主に使うものは<a href="https://example.com">Example.com</a>などのハイパーリンクを始め、<em>痛い</em>などの強調や<strong>とても痛い！</strong>などのより強い強調、<cite>Wikipedia</cite>などの出典元の明示、<q>&quot;HTML5&quot; is widely used as a buzzword</q>などのインラインでの引用、<abbr title="World Wide Web">WWW</abbr>などの略語、<code>&lt;code&gt;</code>などのコード断片、<var>foo</var>などの変数、<samp>Hello World!</samp>などのプログラム出力、<kbd>Enter</kbd>などのキー入力、<mark>注意を向けさせたい</mark>などの単なるマーク、これらをあまり逸脱しない形でスタイルしています。</p>
 
-        <p>ただし、ハイパーリンクは段落内でのみ識別を容易にするため下線を表示させています。また、強調においては日本には斜体の文化は無いので太字としています。</p>
+        <p>ただし、ハイパーリンクは多くの場合本文以外では下線を消しています。また、強調においては日本には斜体の文化は無いので太字としています。</p>
       </section>
 
       <section id="edits" class="section">
