Align Move right only

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -549,20 +549,20 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
       <section id="move" class="section">
         <h1>寄せ</h1>
 
-        <figure class="move left">
+        <figure class="move">
           <img alt="Placeholder Image" height="180" src="https://unsplash.it/320/180/" width="320">
         </figure>
 
         <p>Nam sapien lacus, suscipit in convallis at, eleifend non orci. Fusce nunc dolor, dictum in mi ut, tempus rutrum metus. Vivamus porttitor ac diam sit amet vulputate. Vestibulum pellentesque lacus varius ligula scelerisque tincidunt. Quisque aliquam orci sed sem consectetur, eu pharetra nisl tempus. Donec in eros consequat, porta nisi vel, porta urna. Aliquam in nunc venenatis, ultricies ipsum ultricies, aliquet urna.</p>
 
-        <p>画像を寄せた場合、幅はおよそ1/3ほどまでに制限されます。</p>
-
-        <pre><code class="language-html">&lt;figure <mark>class=&quot;move left&quot;</mark>&gt;
+        <pre><code class="language-html">&lt;figure <mark>class=&quot;move&quot;</mark>&gt;
   &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
 &lt;/figure&gt;
 </code></pre>
 
-        <figure class="move right">
+        <p>画像を寄せた場合、幅はおよそ1/3ほどまでに制限されます。</p>
+
+        <figure class="move">
           <img alt="Placeholder Image" height="320" src="https://unsplash.it/180/320/" width="180">
         </figure>
 
@@ -571,11 +571,6 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         <p>Quisque in diam eu odio accumsan sodales sit amet in velit. Vestibulum tellus enim, eleifend sit amet commodo id, aliquam et libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ipsum arcu, gravida vitae rutrum nec, lacinia eget lorem. Duis ultrices est odio, vitae dictum lorem rhoncus at. Vivamus vehicula consectetur quam vel placerat. Nunc orci eros, sagittis ut velit lacinia, fringilla blandit libero.</p>
 
         <p>高さも8行分ほどまでに制限されます。</p>
-
-        <pre><code class="language-html">&lt;figure <mark>class=&quot;move right&quot;</mark>&gt;
-  &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
-&lt;/figure&gt;
-</code></pre>
       </section>
 
       <section id="hang" class="section">
