Hang Note always on large screen

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -604,18 +604,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 &lt;/aside&gt;
 </code></pre>
 
-        <p>飛び出しウィジェットと組み合わせることで、傍注とすることができます。</p>
-
-        <aside class="note hang">
-          <p>In vitae pretium risus. Vivamus ac ligula non ligula rhoncus sagittis. Fusce velit sem, congue in vestibulum sed, vestibulum sed nibh.</p>
-        </aside>
-
-        <p>Proin et odio eros. Vivamus gravida pulvinar aliquet. Quisque convallis sodales mauris sed bibendum. Vestibulum eros sem, pharetra eleifend blandit nec, elementum convallis neque. Aenean pulvinar aliquam augue, blandit pulvinar sapien rhoncus ac. Donec velit diam, vulputate ut elementum sit amet, interdum quis est. Vivamus sed justo mi, quis molestie nulla. In hac habitasse platea dictumst.</p>
-
-        <pre><code class="language-html">&lt;aside <mark>class=&quot;note hang&quot;</mark>&gt;
-  &lt;p&gt;...&lt;/p&gt;
-&lt;/aside&gt;
-</code></pre>
+        <p>広い画面では傍注のような体裁になります。</p>
       </section>
 
       <section id="pick" class="section">
