Add Displace widget
This widget displaces `figure` element out of content area and moves
`figcaption` to right on large screen.

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -114,6 +114,7 @@
           </li>
           <li>ウィジェット
             <ol>
+              <li><a href="#displace">ずらし</a></li>
               <li><a href="#fill">幅いっぱい</a></li>
               <li><a href="#flat">横並び</a></li>
               <li><a href="#hang">はみ出し</a></li>
@@ -510,6 +511,21 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         </table>
 
         <p>特別なマークアップの必要はありません。</p>
+      </section>
+
+      <section id="displace" class="section">
+        <h1>ずらし</h1>
+
+        <figure class="displace">
+          <img alt="Placeholder Image" height="1440" src="https://unsplash.it/2560/1440/" width="2560">
+          <figcaption>Random Placeholder Image</figcaption>
+        </figure>
+
+        <pre><code class="language-html">&lt;figure <mark>class=&quot;displace&quot;</mark>&gt;
+  &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
+  &lt;figcaption&gt;...&lt;/figcaption&gt;
+&lt;/figure&gt;
+</code></pre>
       </section>
 
       <section id="fill" class="section">
