Add figcaption guide

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -398,7 +398,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         <section>
           <h1 class="subheading">図</h1>
 
-          <p>通常は<code>figure</code>要素を使っています。既に<code>blockquote</code>要素で使われているように内容は画像とは限らないので、強いスタイルは指定していません。</p>
+          <p>通常は<code>figure</code>要素を使っています。既に<code>blockquote</code>要素で使われているように内容は画像とは限らないので、強いスタイルは指定していません。<code>figcaption</code>要素は必須ではありませんが、使う場合は<code>figure</code>要素の最後に置きます。</p>
 
           <figure>
             <img alt="Placeholder Image" height="270" src="https://unsplash.it/480/270/" width="480">
