Update example codes

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -406,7 +406,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
           </figure>
 
           <pre><code class="language-html">&lt;figure&gt;
-  &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
+  &lt;img alt=&quot;...&quot; height=&quot;...&quot; src=&quot;...&quot; width=&quot;...&quot;&gt;
   &lt;figcaption&gt;...&lt;/figcaption&gt;
 &lt;/figure&gt;
 </code></pre>
@@ -435,6 +435,11 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         <figure>
           <a href="../img/about/how-i-markup-and-style-this-website.svg"><img alt="How I Markup &amp; Style This Website" height="1440" src="../img/about/how-i-markup-and-style-this-website.svg" width="2560"></a>
         </figure>
+
+        <pre><code class="language-html">&lt;figure&gt;
+  &lt;img alt=&quot;...&quot; height=&quot;...&quot; src=&quot;...&quot; width=&quot;...&quot;&gt;
+&lt;/figure&gt;
+</code></pre>
       </section>
 
       <section id="tabular-data" class="section">
@@ -501,6 +506,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
               <td>Mauris a purus varius, aliquet elit quis, blandit nisi</td>
               <td>Fusce imperdiet justo eget dignissim sodales</td>
             </tr>
+
             <tr>
               <td>Aliquam non enim sollicitudin, rhoncus sapien ac, luctus nisl</td>
               <td>Fusce accumsan risus id turpis congue luctus</td>
@@ -516,10 +522,14 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
       <section id="displace" class="section">
         <h1>ずらし</h1>
 
+        <p>Phasellus erat libero, vestibulum nec efficitur in, blandit sit amet magna. Aliquam eros arcu, mattis id augue nec, fermentum sollicitudin mauris. Cras blandit massa nisl, id consequat massa aliquam a. Etiam erat turpis, laoreet pulvinar elementum vitae, dictum a ligula. Vestibulum egestas neque quis velit consequat, a sodales urna scelerisque. Phasellus tempus tortor at fringilla tincidunt. Vestibulum sed libero elit.</p>
+
         <figure class="displace">
           <img alt="Placeholder Image" height="1440" src="https://unsplash.it/2560/1440/" width="2560">
           <figcaption>Random Placeholder Image</figcaption>
         </figure>
+
+        <p>Duis augue nunc, facilisis at diam eget, laoreet blandit eros. Nulla varius auctor metus, id mattis ante efficitur in. Nullam nec eros eu est maximus iaculis. Aliquam ac blandit felis. Suspendisse bibendum nisi a nisi congue, id pellentesque dolor placerat. Fusce eu eros mi. Suspendisse potenti. Duis ex mi, dictum vitae lectus et, porta vehicula sem.</p>
 
         <pre><code class="language-html">&lt;figure <mark>class=&quot;displace&quot;</mark>&gt;
   &lt;img alt=&quot;...&quot; src=&quot;...&quot;&gt;
