Add label to Site Search

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -784,7 +784,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
     <aside class="subcontent">
       <form class="site-search" action="https://duckduckgo.com/" role="search">
         <input name="sites" type="hidden" value="hail2u.net">
-        <input class="query" name="q" placeholder="例: Blosxom" size="32" type="search">
+        <input class="query" name="q" placeholder="例: Blosxom" size="32" type="search" aria-label="検索">
         <input class="button" type="submit" value="Search">
       </form>
     </aside>
