--- a/src/css/test.html
+++ b/src/css/test.html
@@ -790,7 +790,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
     </aside>
 
     <footer class="global-footer" role="contentinfo">
-      <p class="footlinks"><a href="https://creativecommons.org/licenses/by/4.0/" rel="license">CC BY</a> • <a href="/feed" rel="alternate">RSS</a></p>
+      <p class="footlinks"><a href="https://creativecommons.org/licenses/by/4.0/" rel="license">CC BY</a> • <a href="https://hail2u.net/feed" rel="alternate">RSS</a></p>
 
       <p class="byline"><a href="https://kyonagashima.com/" rel="author">ながしまきょう</a>が作っています</p>
     </footer>
