Maintain margin only on main headings

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -617,7 +617,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 
         <p>Praesent quis erat sed ex dictum elementum ac vitae magna. Morbi tempus est vitae enim rutrum, vel volutpat nisi rutrum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus vestibulum nisi mi, accumsan bibendum dui condimentum ut. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
 
-        <p>見出しに使うこともできますが、いくつかバッティングする要素が存在します。</p>
+        <p>見出しに使うこともできます。</p>
       </section>
 
       <section id="note" class="section">
