--- a/src/html/documents/what-should-you-say-when-your-app-goes-down.html
+++ b/src/html/documents/what-should-you-say-when-your-app-goes-down.html
@@ -17,13 +17,13 @@
 
     <p>つい最近、私達は多くの有名なサービスが完全に停止するという状況に遭遇しました。この出来事は、こういった何か不具合が起きた時にユーザーとどうコミュニケーションをとるかについて学ぶ良い機会なのではないかと思います。あの時InstagramとAirbnb、IFTTT、Vineがユーザーに送った通知は以下のようなものでした:</p>
 
-    <p><img src="/images/documents/what-should-you-say-when-your-app-goes-down_01.png"></p>
+    <p><img alt="We know many of you are having trouble loading Instagram. We identified the issue and are workingto fix ASAP. Thanks for holdingon." src="/images/documents/what-should-you-say-when-your-app-goes-down_01.png"></p>
 
-    <p><img src="/images/documents/what-should-you-say-when-your-app-goes-down_02.png"></p>
+    <p><img alt="Apologies - Airbnb is among several sites &amp; apps that are temporary down due issues w/ Amazon servers. Investigating now &amp; wil update." src="/images/documents/what-should-you-say-when-your-app-goes-down_02.png"></p>
 
-    <p><img src="/images/documents/what-should-you-say-when-your-app-goes-down_03.png"></p>
+    <p><img alt="You may be rnning into issues with IFTTT.com or the IFTTT app, we're on the case! Thanks for your patience." src="/images/documents/what-should-you-say-when-your-app-goes-down_03.png"></p>
 
-    <p><img src="/images/documents/what-should-you-say-when-your-app-goes-down_04.png"></p>
+    <p><img alt="We're aware of some issues affecting our servers and are working to address them now. Thanks for your patience and hang tight!" src="/images/documents/what-should-you-say-when-your-app-goes-down_04.png"></p>
 
     <h2>これらから何を学べるのでしょうか？</h2>
 
@@ -65,7 +65,7 @@
 
     <p>多くの人々は「AWSの問題です」と言われても理解することは出来ません。一方でこの星のエンジニアならば以下のようなメッセージでも理解することが出来るでしょう:</p>
 
-    <p><img src="/images/documents/what-should-you-say-when-your-app-goes-down_05.png"></p>
+    <p><img alt="Major shit going down in us-east-1 right now." src="/images/documents/what-should-you-say-when-your-app-goes-down_05.png"></p>
 
     <hr>
 
