--- a/src/css/test.html
+++ b/src/css/test.html
@@ -16,10 +16,10 @@
     <link href="debug.css" media="not print" rel="stylesheet">
     <link href="print.css" media="only print" rel="stylesheet">
 
-    <script async src="../js/abbread.js"></script>
-    <script async src="../js/unutm.js"></script>
+    <script defer src="../js/abbread.js"></script>
     <script defer src="../js/ellipsis-title.js"></script>
     <script defer src="../js/reldate.js"></script>
+    <script defer src="../js/unutm.js"></script>
     <script defer src="../js/wrapfix.js"></script>
     <script defer src="../js/toggle-column.js"></script>
     <script defer src="../js/toggle-eyecatch.js"></script>
