Add dot to Logo

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -38,7 +38,7 @@
 
   <body>
     <header class="global-header" role="banner">
-      <h1 class="logo"><a href="https://hail2u.net/"><svg height="272" viewBox="0 0 137 272" width="137" role="img" aria-labelledby="logo-title"><title id="logo-title">Hail2u.net</title><path d="M101 216v-64H37v64H1V56h36v64h64V56h36v160z"/></svg></a></h1>
+      <h1 class="logo"><a href="https://hail2u.net/"><svg height="272" viewBox="0 0 192 272" width="192" role="img" aria-labelledby="logo-title"><title id="logo-title">Hail2u.net</title><path d="M1 56v160h36v-64h64v64h36V56h-36v64H37V56zm154 124v36h36v-36z"/></svg></a></h1>
 
       <nav class="site-navigation">
         <ul>
