--- a/src/css/test.html
+++ b/src/css/test.html
@@ -64,7 +64,7 @@
         <p>マークアップはHTMLのソースを、スタイルについてはこのページで参照されている非圧縮の<abbr title="Cascading Style Sheet">CSS</abbr>ファイルを参照してください。このページに限ってはマークアップにおかしいところが多々ありますが、その多くはプレビューを作る上でのやむを得ない事情によるものです。</p>
 
         <section>
-          <h1 class="subheading">デバッグ</h1>
+          <h1>デバッグ</h1>
 
           <p>レイアウトの位置確認のために、空いているところをダブルクリックするとグリッドと要素のアウトラインをトグルすることができます。グリッドは<abbr>CSS</abbr>グラデーションを利用した簡単なもののため、描画領域の幅によっては数ピクセル程ずれることがあります。</p>
 
@@ -72,7 +72,7 @@
         </section>
 
         <section>
-          <h1 class="subheading">印刷向けスタイルシート</h1>
+          <h1>印刷向けスタイルシート</h1>
 
           <p>必要のないものを隠し、適切な位置で改行されるように調節しています。</p>
         </section>
@@ -186,7 +186,7 @@
         <p>また、レイアウトが変わるタイミングで適切に文字サイズも変わります。ただしフルHD以上で表示された場合には適切な文字サイズを選定するのが難しい（または面倒くさい）ため、描画領域の横幅から自動生成しています。</p>
 
         <section id="characters-per-line">
-          <h1 class="subheading">行あたりの文字数</h1>
+          <h1>行あたりの文字数</h1>
 
           <p class="line-length">Lorem ipsum dolor sit amet, consectetur adip*iscing elit. Suspendisse moll*is elementum leo sed feugiat.</p>
 
@@ -200,19 +200,19 @@
         <p>HTML5が定義するところのセクションを構成する要素についてです。</p>
 
         <section>
-          <h1 class="subheading">body</h1>
+          <h1>body</h1>
 
           <p>文字はブラウザーの初期設定のまま（通常は<code>16px</code>）で表示されます。行間はx-heightという概念のない日本語がメインなので少し多めに<code>1.7</code>としています。</p>
         </section>
 
         <section>
-          <h1 class="subheading">セクション構成物</h1>
+          <h1>セクション構成物</h1>
 
           <p>セクションを作成する、<code>section</code>、<code>nav</code>、<code>article</code>と<code>aside</code>要素では、特に何もスタイルを指定していません。</p>
         </section>
 
         <section>
-          <h1 class="subheading">見出し</h1>
+          <h1>見出し</h1>
 
           <p>セクションの見出しは<code>h1</code>要素でマークアップされます。</p>
 
@@ -221,7 +221,7 @@
         </section>
 
         <section>
-          <h1 class="subheading">小見出し</h1>
+          <h1>小見出し</h1>
 
           <p>セクション内の小見出しでも<code>h1</code>要素を使います。必ず<code>section</code>要素を組み合わせることで、<abbr>CSS</abbr>でスタイリングできるようにしています。</p>
 
@@ -238,7 +238,7 @@
         <p>コンテンツで使われる基本的な要素についてです。</p>
 
         <section>
-          <h1 class="subheading">段落</h1>
+          <h1>段落</h1>
 
           <p>様々な所で使用されるので、他とバッティングしないように相殺可能なマージン以外のスタイルは指定していません。</p>
 
@@ -247,7 +247,7 @@
         </section>
 
         <section>
-          <h1 class="subheading">水平線</h1>
+          <h1>水平線</h1>
 
           <p>主に暗黙のセクションの区切りが挿入される所に恣意的に使用しています。線の代わりに表示されるアステリズムはSVGです。</p>
 
@@ -258,7 +258,7 @@
         </section>
 
         <section>
-          <h1 class="subheading">整形済みテキスト</h1>
+          <h1>整形済みテキスト</h1>
 
           <p>主にコードの表示やコマンドラインでの操作例に使用しています。主に英文になることから、ブラウザーの慣習に従ってフォントサイズを1段階落としてあります。また、本文とのバランスをとるため、<code>pre</code>要素の3行が本文の2行に相当するようにしてあります。</p>
 
@@ -285,7 +285,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         </section>
 
         <section>
-          <h1 class="subheading">引用</h1>
+          <h1>引用</h1>
 
           <p>内部で様々なスタイルが使用されるので、ブロックの左端に縦線を引く以外のスタイルは指定しません。字体に斜体を採用すべきところですが、<a href="https://en.wikipedia.org/wiki/Meiryo">メイリオ</a>が和文部分に斜体を持っていないのでそれを考慮して無指定にしています。マークアップは通常、全体を<code>figure</code>要素で括り、引用元の表記は<code>figcaption</code>と<code>cite</code>要素を組み合わせて行います。</p>
 
@@ -312,7 +312,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         </section>
 
         <section>
-          <h1 class="subheading">序列付きリストと序列なしリスト</h1>
+          <h1>序列付きリストと序列なしリスト</h1>
 
           <p>双方共にデフォルトとあまり違わない形になるようにスタイルは最小限にとどめています。序列付きリストではアラビア数字をそのマークに使用します。</p>
 
@@ -362,7 +362,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         </section>
 
         <section>
-          <h1 class="subheading">関連リスト</h1>
+          <h1>関連リスト</h1>
 
           <p>内部、特に<code>dd</code>要素内で様々な要素が使われたり使われなかったりすることから、スタイルは最小限にとどめています。</p>
 
@@ -390,7 +390,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         </section>
 
         <section>
-          <h1 class="subheading">図</h1>
+          <h1>図</h1>
 
           <p>通常は<code>figure</code>要素を使っています。既に<code>blockquote</code>要素で使われているように内容は画像とは限らないので、強いスタイルは指定していません。<code>figcaption</code>要素は必須ではありませんが、使う場合は<code>figure</code>要素の最後に置きます。</p>
 
@@ -680,7 +680,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         <p>以下はマークアップやスタイル、スクリプトにおけるコーディング規約もどきです。</p>
 
         <section>
-          <h1 class="subheading">マークアップ</h1>
+          <h1>マークアップ</h1>
 
           <ul>
             <li><a href="https://html.spec.whatwg.org/multipage/">HTML Standard</a>のHTML文法を使ってUTF-8で書きます</li>
@@ -706,7 +706,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         </section>
 
         <section>
-          <h1 class="subheading">スタイル</h1>
+          <h1>スタイル</h1>
 
           <ul>
             <li><a href="https://sass-lang.com/">Sass</a>のSCSS記法を使ってUTF-8で書きます</li>
@@ -739,7 +739,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         </section>
 
         <section>
-          <h1 class="subheading">スクリプト</h1>
+          <h1>スクリプト</h1>
 
           <ul>
             <li><a href="http://www.ecma-international.org/ecma-262/7.0/">ES2016</a>に従ってUTF-8で書きます</li>
