Fix top margin of nav heading

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -87,7 +87,7 @@
         </aside>
       </article>
 
-      <nav id="toc">
+      <nav id="toc" class="section">
         <h1>目次</h1>
 
         <ol>
