Use debug- prefix for debugging class

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -140,7 +140,7 @@
       <section id="colors">
         <h1>カラーパレット</h1>
 
-        <ul class="colors">
+        <ul class="debug-colors">
           <li>前景色</li>
           <li>前景色（明るめ）</li>
           <li>背景色</li>
@@ -155,23 +155,23 @@
         <table>
           <tr>
             <th rowspan="3">本文</th>
-            <td class="font-family-body"><a href="https://en.wikipedia.org/wiki/San_Francisco_(2014_typeface)">San Francisco</a>または<a href="https://en.wikipedia.org/wiki/Segoe">Segoe UI</a></td>
+            <td class="debug-font-family-body"><a href="https://en.wikipedia.org/wiki/San_Francisco_(2014_typeface)">San Francisco</a>または<a href="https://en.wikipedia.org/wiki/Segoe">Segoe UI</a></td>
           </tr>
           <tr>
-            <td class="font-family-body">The quick brown fox jumps over the lazy dog.</td>
+            <td class="debug-font-family-body">The quick brown fox jumps over the lazy dog.</td>
           </tr>
           <tr>
-            <td class="font-family-body bold">The quick brown fox jumps over the lazy dog.</td>
+            <td class="debug-font-family-body debug-bold">The quick brown fox jumps over the lazy dog.</td>
           </tr>
           <tr>
             <th rowspan="3">コード</th>
-            <td class="font-family-pre"><a href="https://en.wikipedia.org/wiki/Menlo_(typeface)">Menlo</a>または<a href="https://en.wikipedia.org/wiki/Consolas">Consolas</a></td>
+            <td class="debug-font-family-pre"><a href="https://en.wikipedia.org/wiki/Menlo_(typeface)">Menlo</a>または<a href="https://en.wikipedia.org/wiki/Consolas">Consolas</a></td>
           </tr>
           <tr>
-            <td class="font-family-pre">The quick brown fox jumps over the lazy dog.</td>
+            <td class="debug-font-family-pre">The quick brown fox jumps over the lazy dog.</td>
           </tr>
           <tr>
-            <td class="font-family-pre bold">The quick brown fox jumps over the lazy dog.</td>
+            <td class="debug-font-family-pre debug-bold">The quick brown fox jumps over the lazy dog.</td>
           </tr>
         </table>
       </section>
@@ -188,7 +188,7 @@
         <section id="characters-per-line">
           <h1>行あたりの文字数</h1>
 
-          <p class="line-length">Lorem ipsum dolor sit amet, consectetur adip*iscing elit. Suspendisse moll*is elementum leo sed feugiat.</p>
+          <p class="debug-line-length">Lorem ipsum dolor sit amet, consectetur adip*iscing elit. Suspendisse moll*is elementum leo sed feugiat.</p>
 
           <p>直前の段落のアスタリスクは45文字目と75文字目に打ってあります。一行の文字数は45–75文字（<code>line-height: 1.5</code>の場合）と言われているので、このアスタリスクが行をまたいでいると適切な文字数で折り返されているということになります。</p>
         </section>
