--- a/src/css/test.html
+++ b/src/css/test.html
@@ -58,7 +58,7 @@
         <h1>スタイル・ガイド - いろいろ</h1>
 
         <figure class="fill">
-          <a href="../img/about/how-i-markup-and-style-this-website.svg"><img alt="How I Markup &amp; Style This Website" height="1440" src="../img/about/how-i-markup-and-style-this-website.svg" width="2560"></a>
+          <a href="../img/about/how-i-markup-and-style-this-website.svg"><img alt="How I Markup &amp; Style This Website" src="../img/about/how-i-markup-and-style-this-website.svg"></a>
         </figure>
 
         <p>マークアップはHTMLのソースを、スタイルについてはこのページで参照されている非圧縮の<abbr title="Cascading Style Sheet">CSS</abbr>ファイルを参照してください。このページに限ってはマークアップにおかしいところが多々ありますが、その多くはプレビューを作る上でのやむを得ない事情によるものです。</p>
@@ -79,10 +79,10 @@
 
         <aside class="share">
           <ul>
-            <li><a href="https://twitter.com/intent/tweet?text=Style+Guide+-+About+-+Hail2u.net&amp;url=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F&amp;via=hail2u_"><svg width="512" height="512" role="img" viewBox="0 0 512 512" aria-labelledby="icon-twitter"><title id="icon-twitter">Twitter</title><path d="M448 136.906c-14.127 6.267-29.313 10.5-45.247 12.405 16.262-9.75 28.756-25.188 34.639-43.586a157.685 157.685 0 0 1-50.029 19.117c-14.369-15.312-34.844-24.877-57.504-24.877-43.507 0-78.783 35.272-78.783 78.78 0 6.175.697 12.188 2.04 17.954-65.475-3.285-123.527-34.65-162.382-82.314-6.782 11.635-10.667 25.169-10.667 39.608 0 27.333 13.908 51.446 35.048 65.574a78.472 78.472 0 0 1-35.684-9.853c-.007.328-.007.657-.007.991 0 38.17 27.157 70.01 63.196 77.25a78.9 78.9 0 0 1-35.578 1.35c10.025 31.298 39.12 54.077 73.594 54.71-26.962 21.132-60.931 33.727-97.843 33.727a160.17 160.17 0 0 1-18.794-1.102c34.865 22.352 76.276 35.397 120.766 35.397 144.909 0 224.153-120.046 224.153-224.154 0-3.416-.079-6.812-.23-10.191 15.395-11.109 28.75-24.983 39.312-40.783"/></svg></a></li>
-            <li><a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F"><svg width="512" height="512" viewBox="0 0 512 512" role="img" aria-labelledby="icon-facebook"><title id="icon-facebook">Facebook</title><path d="M350.912 71.615c-10.38-2.221-20.215-4.034-29.507-5.439-9.292-1.405-19.4-2.13-30.323-2.176-31.819.136-54.799 7.479-68.941 22.028-14.142 14.55-21.077 35.49-20.804 62.822v39.705h-40.249v64.181h40.249v195.263h78.323V252.736h57.11l5.439-64.181h-62.55v-31.003c-.453-8.793.861-15.682 3.943-20.669 3.082-4.986 10.651-7.524 22.708-7.615 4.816.023 10.413.386 16.793 1.088 6.379.703 12.385 1.609 18.017 2.72z"/></svg></a></li>
-            <li><a href="https://plus.google.com/share?url=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F"><svg width="512" height="512" viewBox="0 0 512 512" role="img" aria-labelledby="icon-google"><title id="icon-google">Google+</title><path d="M192 128c-70.692 0-128 57.308-128 128 0 70.692 57.308 128 128 128 70.692 0 128-57.308 128-128a127.952 127.952 0 0 0-2.334-24H192v48h76.297c-10.479 33.322-41.366 55.992-76.297 56-44.183 0-80-35.817-80-80s35.817-80 80-80a80.001 80.001 0 0 1 56.533 23.467l33.92-33.92A127.997 127.997 0 0 0 192 128zm192 80v32h-32v32h32v32h32v-32h32v-32h-32v-32z"/></svg></a></li>
-            <li><a href="https://b.hatena.ne.jp/add?title=Style+Guide+-+About+-+Hail2u.net&amp;url=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F"><svg width="512" height="512" viewBox="0 0 512 512" role="img" aria-labelledby="icon-hatena"><title id="icon-hatena">はてなブックマーク</title><path d="M64 96v320h148c40 0 80-12 96-48 20-36 12-92-24-116-12-8-24-12-36-16 28-4 52-24 52-52 4-28-4-64-32-76-32-12-76-12-108-12H64zm300 0v212h80V96h-80zm-220 60s44 0 56 4c24 8 24 48-4 52-8 4-52 4-52 4v-60zm0 124s44 0 64 4c24 4 32 28 20 48-8 16-24 16-40 16h-44v-68zm260 48a44 44 0 0 0-44 44 44 44 0 0 0 44 44 44 44 0 0 0 44-44 44 44 0 0 0-44-44z"/></svg></a></li>
+            <li><a href="https://twitter.com/intent/tweet?text=Style+Guide+-+About+-+Hail2u.net&amp;url=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F&amp;via=hail2u_"><svg height="512" viewBox="0 0 512 512" width="512" role="img" aria-labelledby="icon-twitter"><title id="icon-twitter">Twitter</title><path d="M448 136.906c-14.127 6.267-29.313 10.5-45.247 12.405 16.262-9.75 28.756-25.188 34.639-43.586a157.685 157.685 0 0 1-50.029 19.117c-14.369-15.312-34.844-24.877-57.504-24.877-43.507 0-78.783 35.272-78.783 78.78 0 6.175.697 12.188 2.04 17.954-65.475-3.285-123.527-34.65-162.382-82.314-6.782 11.635-10.667 25.169-10.667 39.608 0 27.333 13.908 51.446 35.048 65.574a78.472 78.472 0 0 1-35.684-9.853c-.007.328-.007.657-.007.991 0 38.17 27.157 70.01 63.196 77.25a78.9 78.9 0 0 1-35.578 1.35c10.025 31.298 39.12 54.077 73.594 54.71-26.962 21.132-60.931 33.727-97.843 33.727a160.17 160.17 0 0 1-18.794-1.102c34.865 22.352 76.276 35.397 120.766 35.397 144.909 0 224.153-120.046 224.153-224.154 0-3.416-.079-6.812-.23-10.191 15.395-11.109 28.75-24.983 39.312-40.783"/></svg></a></li>
+            <li><a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F"><svg height="512" viewBox="0 0 512 512" width="512" role="img" aria-labelledby="icon-facebook"><title id="icon-facebook">Facebook</title><path d="M350.912 71.615c-10.38-2.221-20.215-4.034-29.507-5.439-9.292-1.405-19.4-2.13-30.323-2.176-31.819.136-54.799 7.479-68.941 22.028-14.142 14.55-21.077 35.49-20.804 62.822v39.705h-40.249v64.181h40.249v195.263h78.323V252.736h57.11l5.439-64.181h-62.55v-31.003c-.453-8.793.861-15.682 3.943-20.669 3.082-4.986 10.651-7.524 22.708-7.615 4.816.023 10.413.386 16.793 1.088 6.379.703 12.385 1.609 18.017 2.72z"/></svg></a></li>
+            <li><a href="https://plus.google.com/share?url=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F"><svg height="512" viewBox="0 0 512 512" width="512" role="img" aria-labelledby="icon-google"><title id="icon-google">Google+</title><path d="M192 128c-70.692 0-128 57.308-128 128 0 70.692 57.308 128 128 128 70.692 0 128-57.308 128-128a127.952 127.952 0 0 0-2.334-24H192v48h76.297c-10.479 33.322-41.366 55.992-76.297 56-44.183 0-80-35.817-80-80s35.817-80 80-80a80.001 80.001 0 0 1 56.533 23.467l33.92-33.92A127.997 127.997 0 0 0 192 128zm192 80v32h-32v32h32v32h32v-32h32v-32h-32v-32z"/></svg></a></li>
+            <li><a href="https://b.hatena.ne.jp/add?title=Style+Guide+-+About+-+Hail2u.net&amp;url=https%3A%2F%2Fhail2u.net%2Fabout%2Fstyle-guide%2F"><svg height="512" viewBox="0 0 512 512" width="512" role="img" aria-labelledby="icon-hatena"><title id="icon-hatena">はてなブックマーク</title><path d="M64 96v320h148c40 0 80-12 96-48 20-36 12-92-24-116-12-8-24-12-36-16 28-4 52-24 52-52 4-28-4-64-32-76-32-12-76-12-108-12H64zm300 0v212h80V96h-80zm-220 60s44 0 56 4c24 8 24 48-4 52-8 4-52 4-52 4v-60zm0 124s44 0 64 4c24 4 32 28 20 48-8 16-24 16-40 16h-44v-68zm260 48a44 44 0 0 0-44 44 44 44 0 0 0 44 44 44 44 0 0 0 44-44 44 44 0 0 0-44-44z"/></svg></a></li>
           </ul>
         </aside>
       </article>
@@ -133,7 +133,7 @@
         <p>ロゴとほぼ同じ画像を正方形にしたSVGフォーマットの画像から生成されています。PNGフォーマットへ変換したものや、更にそのPNGフォーマットの画像をアイコン形式にまとめたものがブラウザーによって適宜使われます。</p>
 
         <figure>
-          <img alt="Uppercase H" height="128" src="../img/favicon-large.svg" width="128">
+          <img alt="Uppercase H" src="../img/favicon-large.svg">
         </figure>
       </section>
 
@@ -395,7 +395,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
           <p>通常は<code>figure</code>要素を使っています。既に<code>blockquote</code>要素で使われているように内容は画像とは限らないので、強いスタイルは指定していません。<code>figcaption</code>要素は必須ではありませんが、使う場合は<code>figure</code>要素の最後に置きます。</p>
 
           <figure>
-            <img alt="Placeholder Image" height="270" src="https://unsplash.it/480/270/" width="480">
+            <img alt="Placeholder Image" src="https://unsplash.it/480/270/">
             <figcaption>Random PlaceHolder Image</figcaption>
           </figure>
 
@@ -427,7 +427,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         <p>画像や動画は<code>figure</code>要素を使って参照します。</p>
 
         <figure>
-          <a href="../img/about/how-i-markup-and-style-this-website.svg"><img alt="How I Markup &amp; Style This Website" height="1440" src="../img/about/how-i-markup-and-style-this-website.svg" width="2560"></a>
+          <a href="../img/about/how-i-markup-and-style-this-website.svg"><img alt="How I Markup &amp; Style This Website" src="../img/about/how-i-markup-and-style-this-website.svg"></a>
         </figure>
 
         <pre><code class="language-html">&lt;figure&gt;
@@ -519,7 +519,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         <p>Phasellus erat libero, vestibulum nec efficitur in, blandit sit amet magna. Aliquam eros arcu, mattis id augue nec, fermentum sollicitudin mauris. Cras blandit massa nisl, id consequat massa aliquam a. Etiam erat turpis, laoreet pulvinar elementum vitae, dictum a ligula. Vestibulum egestas neque quis velit consequat, a sodales urna scelerisque. Phasellus tempus tortor at fringilla tincidunt. Vestibulum sed libero elit.</p>
 
         <figure class="displace">
-          <img alt="Placeholder Image" height="1440" src="https://unsplash.it/2560/1440/" width="2560">
+          <img alt="Placeholder Image" src="https://unsplash.it/2560/1440/">
           <figcaption>Random Placeholder Image</figcaption>
         </figure>
 
@@ -536,7 +536,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         <h1>幅いっぱい</h1>
 
         <figure class="fill">
-          <img alt="Placeholder Image" height="810" src="https://unsplash.it/1440/810/" width="1440">
+          <img alt="Placeholder Image" src="https://unsplash.it/1440/810/">
           <figcaption>Random Placeholder Image</figcaption>
         </figure>
 
@@ -570,7 +570,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         <h1>寄せ</h1>
 
         <figure class="move">
-          <img alt="Placeholder Image" height="180" src="https://unsplash.it/320/180/" width="320">
+          <img alt="Placeholder Image" src="https://unsplash.it/320/180/">
         </figure>
 
         <p>Nam sapien lacus, suscipit in convallis at, eleifend non orci. Fusce nunc dolor, dictum in mi ut, tempus rutrum metus. Vivamus porttitor ac diam sit amet vulputate. Vestibulum pellentesque lacus varius ligula scelerisque tincidunt. Quisque aliquam orci sed sem consectetur, eu pharetra nisl tempus. Donec in eros consequat, porta nisi vel, porta urna. Aliquam in nunc venenatis, ultricies ipsum ultricies, aliquet urna.</p>
@@ -583,7 +583,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         <p>画像を寄せた場合、幅はおよそ1/3ほどまでに制限されます。</p>
 
         <figure class="move">
-          <img alt="Placeholder Image" height="320" src="https://unsplash.it/180/320/" width="180">
+          <img alt="Placeholder Image" src="https://unsplash.it/180/320/">
         </figure>
 
         <p>Suspendisse cursus massa ut erat varius, a tempus mi venenatis. Vivamus molestie nibh nec rutrum finibus. Duis egestas hendrerit ultricies. In rutrum lacus at mattis blandit.</p>
@@ -597,7 +597,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         <h1>飛び出し</h1>
 
         <figure class="hang">
-          <img alt="Placeholder Image" height="480" src="https://unsplash.it/480/270/" width="270">
+          <img alt="Placeholder Image" src="https://unsplash.it/480/270/">
         </figure>
 
         <p>Vestibulum ultricies urna risus. Duis vitae fringilla velit. Etiam vestibulum, tortor nec vehicula mattis, magna ligula scelerisque risus, sed viverra orci ligula nec purus. Vivamus eleifend, magna id fermentum malesuada, orci lorem tincidunt ipsum, ut elementum purus mauris at est.</p>
