Add h1.hang markup example

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -614,6 +614,9 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 
         <p>見出しに使うこともできます。</p>
 
+        <pre><code class="language-html">&lt;h1 <mark>class=&quot;note&quot;</mark>&gt;...&lt;/h1&gt;
+</code></pre>
+
         <aside class="note">
           <p>Consequat dolor nostrud occaecat tempor culpa sunt do laboris exercitation elit reprehenderit et ex. Sint nulla id dolore veniam ea in dolore. In occaecat laborum anim aliqua mollit deserunt reprehenderit culpa do ea commodo.</p>
         </aside>
