Fix aside.hang markup

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -617,7 +617,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
         <pre><code class="language-html">&lt;h1 <mark>class=&quot;note&quot;</mark>&gt;...&lt;/h1&gt;
 </code></pre>
 
-        <aside class="note">
+        <aside class="hang">
           <p>Consequat dolor nostrud occaecat tempor culpa sunt do laboris exercitation elit reprehenderit et ex. Sint nulla id dolore veniam ea in dolore. In occaecat laborum anim aliqua mollit deserunt reprehenderit culpa do ea commodo.</p>
         </aside>
 
@@ -625,7 +625,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
 
         <p><code>aside</code>要素に使うと傍注のような体裁になります。</p>
 
-        <pre><code class="language-html">&lt;aside <mark>class=&quot;note&quot;</mark>&gt;
+        <pre><code class="language-html">&lt;aside <mark>class=&quot;hang&quot;</mark>&gt;
   &lt;p&gt;...&lt;/p&gt;
 &lt;/aside&gt;
 </code></pre>
