Add directory role to in-site link list

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -90,7 +90,7 @@
       <section id="toc">
         <h1>目次</h1>
 
-        <ol>
+        <ol role="directory">
           <li><a href="#introduction">このスタイル・ガイドについて</a></li>
           <li><a href="#icons">アイコン</a></li>
           <li><a href="#colors">カラーパレット</a></li>
