List only “do”s in coding rules

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -617,7 +617,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
             <li><a href="https://html.spec.whatwg.org/multipage/">HTML Standard</a>のHTML文法を使ってUTF-8で書きます</li>
             <li>インデントは半角空白を二文字使います</li>
             <li>要素名や属性名は全て小文字に統一します</li>
-            <li>属性値を括るクオートは省略しません</li>
+            <li>属性値を二重引用符で括ります</li>
             <li>真偽値を取る属性値はその値を省略します</li>
             <li>属性の記述順
               <ol>
@@ -645,12 +645,12 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
             <li>セレクターは一行につき一つに制限します</li>
             <li>定義は一行につき一つに制限します</li>
             <li>プロパティーのアルファベット順に定義を記述します</li>
-            <li>省略系のプロパティーはなるべく使いません
+            <li>省略形ではないプロパティーを使います
               <ul>
                 <li><code>margin</code>や<code>padding</code>、 <code>border</code>プロパティーに限って使うことがあります</li>
               </ul>
             </li>
-            <li>値はなるべく一行（80文字）に収まるように書きます
+            <li>値は一行あたり80文字に収まるように書きます
               <ul>
                 <li><code>linear-gradient()</code>等の複雑なものに限って行を分けて書くことがあります</li>
               </ul>
@@ -660,9 +660,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
               <ul>
                 <li>BEMの思想を流用し、ファイルを作成してブロックを、ネストでエレメントを、<code>&amp;</code>を使ったネストでモディファイアーを表現します</li>
                 <li>変数はなるべく局所で定義します</li>
-                <li>関数は使いません</li>
-                <li>ミックスインは使いません</li>
-                <li>プレースホルダー・セレクターは使いません</li>
+                <li>関数、ミックスイン、プレースホルダー・セレクターはなるべくCSSの機能を使って代替させます</li>
               </ul>
             </li>
             <li><a href="http://stylelint.io/">stylelint</a>でチェックします</li>
@@ -675,6 +673,8 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
           <ul>
             <li><a href="http://www.ecma-international.org/ecma-262/7.0/">ES2016</a>に従ってUTF-8で書きます</li>
             <li>インデントは半角空白を二文字使います</li>
+            <li><code>const</code>を優先します</li>
+            <li>テンプレート・リテラルを優先します</li>
             <li><a href="http://eslint.org/">ESLint</a>でチェックします</li>
           </ul>
         </section>
