--- a/src/css/test.html
+++ b/src/css/test.html
@@ -12,9 +12,9 @@
     <link href="https://hail2u.net/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
     <link href="https://hail2u.net/feed" rel="alternate" type="application/rss+xml">
 
-    <link href="main.css" media="not print" rel="stylesheet">
-    <link href="debug.css" media="not print" rel="stylesheet">
-    <link href="print.css" media="only print" rel="stylesheet">
+    <link href="./main.css" media="not print" rel="stylesheet">
+    <link href="./debug.css" media="not print" rel="stylesheet">
+    <link href="./print.css" media="only print" rel="stylesheet">
 
     <script defer src="../js/abbread.js"></script>
     <script defer src="../js/ellipsis-title.js"></script>
