Test abbread more

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -61,7 +61,7 @@
           <a href="../img/about/how-i-markup-and-style-this-website.svg"><img alt="How I Markup &amp; Style This Website" src="../img/about/how-i-markup-and-style-this-website.svg"></a>
         </figure>
 
-        <p>マークアップはHTMLのソースを、スタイルについてはこのページで参照されている非圧縮の<abbr title="Cascading Style Sheet">CSS</abbr>ファイルを参照してください。このページに限ってはマークアップにおかしいところが多々ありますが、その多くはプレビューを作る上でのやむを得ない事情によるものです。</p>
+        <p>マークアップは<abbr title="HyperText Markup Language">HTML</abbr>のソースを、スタイルについてはこのページで参照されている非圧縮の<abbr title="Cascading Style Sheet">CSS</abbr>ファイルを参照してください。このページに限ってはマークアップにおかしいところが多々ありますが、その多くはプレビューを作る上でのやむを得ない事情によるものです。</p>
 
         <section>
           <h1>デバッグ</h1>
@@ -121,7 +121,7 @@
       <section id="icons">
         <h1>アイコン</h1>
 
-        <p>ロゴとほぼ同じ画像を正方形にしたSVGフォーマットの画像から生成されています。PNGフォーマットへ変換したものや、更にそのPNGフォーマットの画像をアイコン形式にまとめたものがブラウザーによって適宜使われます。</p>
+        <p>ロゴとほぼ同じ画像を正方形にした<abbr title="Scalable Vector Graphics">SVG</abbr>フォーマットの画像から生成されています。<abbr title="Portable Network Graphics">PNG</abbr>フォーマットへ変換したものや、更にその<abbr>PNG</abbr>フォーマットの画像をアイコン形式にまとめたものがブラウザーによって適宜使われます。</p>
 
         <figure>
           <img alt="Uppercase H" src="../img/favicon-large.svg">
@@ -188,7 +188,7 @@
       <section id="sections">
         <h1>セクション</h1>
 
-        <p>HTML5が定義するところのセクションを構成する要素についてです。</p>
+        <p><abbr>HTML</abbr>5が定義するところのセクションを構成する要素についてです。</p>
 
         <section>
           <h1>body</h1>
@@ -240,7 +240,7 @@
         <section>
           <h1>水平線</h1>
 
-          <p>主に暗黙のセクションの区切りが挿入される所に恣意的に使用しています。線の代わりに表示されるアステリズムはSVGです。</p>
+          <p>主に暗黙のセクションの区切りが挿入される所に恣意的に使用しています。線の代わりに表示されるアステリズムは<abbr>SVG</abbr>です。</p>
 
           <hr>
 
@@ -634,7 +634,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
           <h1>マークアップ</h1>
 
           <ul>
-            <li><a href="https://html.spec.whatwg.org/multipage/">HTML Standard</a>のHTML文法を使ってUTF-8で書きます</li>
+            <li><a href="https://html.spec.whatwg.org/multipage/">HTML Standard</a>の<abbr>HTML</abbr>文法を使ってUTF-8で書きます</li>
             <li>インデントは半角空白を二文字使います</li>
             <li>要素名や属性名は全て小文字に統一します</li>
             <li>属性値を二重引用符で括ります</li>
