--- a/src/css/test.html
+++ b/src/css/test.html
@@ -16,11 +16,9 @@
     <link href="./debug.css" media="not print" rel="stylesheet">
     <link href="./print.css" media="only print" rel="stylesheet">
 
-    <script defer src="../js/abbread.js"></script>
     <script defer src="../js/ellipsis-title.js"></script>
     <script defer src="../js/reldate.js"></script>
     <script defer src="../js/unutm.js"></script>
-    <script defer src="../js/wrapfix.js"></script>
     <script defer src="../js/toggle-column.js"></script>
     <script defer src="../js/toggle-eyecatch.js"></script>
     <script defer src="../js/toggle-outline.js"></script>
@@ -61,12 +59,12 @@
           <a href="../img/about/how-i-markup-and-style-this-website.svg"><img alt="How I Markup &amp; Style This Website" src="../img/about/how-i-markup-and-style-this-website.svg"></a>
         </figure>
 
-        <p>マークアップは<abbr title="HyperText Markup Language">HTML</abbr>のソースを、スタイルについてはこのページで参照されている非圧縮の<abbr title="Cascading Style Sheet">CSS</abbr>ファイルを参照してください。このページに限ってはマークアップにおかしいところが多々ありますが、その多くはプレビューを作る上でのやむを得ない事情によるものです。</p>
+        <p>マークアップはHTMLのソースを、スタイルについてはこのページで参照されている非圧縮のCSSファイルを参照してください。このページに限ってはマークアップにおかしいところが多々ありますが、その多くはプレビューを作る上でのやむを得ない事情によるものです。</p>
 
         <section>
           <h1>デバッグ</h1>
 
-          <p>レイアウトの位置確認のために、空いているところをダブルクリックするとグリッドと要素のアウトラインをトグルすることができます。グリッドは<abbr>CSS</abbr>グラデーションを利用した簡単なもののため、描画領域の幅によっては数ピクセル程ずれることがあります。</p>
+          <p>レイアウトの位置確認のために、空いているところをダブルクリックするとグリッドと要素のアウトラインをトグルすることができます。グリッドはCSSグラデーションを利用した簡単なもののため、描画領域の幅によっては数ピクセル程ずれることがあります。</p>
 
           <p>また、最初の見出しをクリックすることでホームでのスタイルへの切り替えを、日付をクリックすることでアイキャッチ画像の切り替えを、それぞれ行うことができます。</p>
         </section>
@@ -112,7 +110,7 @@
       <section id="icons">
         <h1>アイコン</h1>
 
-        <p>ロゴとほぼ同じ画像を正方形にした<abbr title="Scalable Vector Graphics">SVG</abbr>フォーマットの画像から生成されています。<abbr title="Portable Network Graphics">PNG</abbr>フォーマットへ変換したものや、更にその<abbr>PNG</abbr>フォーマットの画像をアイコン形式にまとめたものがブラウザーによって適宜使われます。</p>
+        <p>ロゴとほぼ同じ画像を正方形にしたSVGフォーマットの画像から生成されています。PNGフォーマットへ変換したものや、更にそのPNGフォーマットの画像をアイコン形式にまとめたものがブラウザーによって適宜使われます。</p>
 
         <figure>
           <img alt="Uppercase H" src="../img/favicon-large.svg">
@@ -179,7 +177,7 @@
       <section id="sections">
         <h1>セクション</h1>
 
-        <p><abbr>HTML</abbr>5が定義するところのセクションを構成する要素についてです。</p>
+        <p>HTML5が定義するところのセクションを構成する要素についてです。</p>
 
         <section>
           <h1>body</h1>
@@ -205,7 +203,7 @@
         <section>
           <h1>小見出し</h1>
 
-          <p>セクション内の小見出しでも<code>h1</code>要素を使います。必ず<code>section</code>要素を組み合わせることで、<abbr>CSS</abbr>でスタイリングできるようにしています。</p>
+          <p>セクション内の小見出しでも<code>h1</code>要素を使います。必ず<code>section</code>要素を組み合わせることで、CSSでスタイリングできるようにしています。</p>
 
           <pre><code class="language-html">&lt;section&gt;
   &lt;h1&gt;...&lt;/h1&gt;
@@ -231,7 +229,7 @@
         <section>
           <h1>水平線</h1>
 
-          <p>主に暗黙のセクションの区切りが挿入される所に恣意的に使用しています。線の代わりに表示されるアステリズムは<abbr>SVG</abbr>です。</p>
+          <p>主に暗黙のセクションの区切りが挿入される所に恣意的に使用しています。線の代わりに表示されるアステリズムはSVGです。</p>
 
           <hr>
 
@@ -392,7 +390,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
       <section id="text-level-semantics">
         <h1>語・句・文単位での意味付け</h1>
 
-        <p>段落内では様々な意味づけを行うマークアップを使用しています。主に使うものは<a href="https://example.com">Example.com</a>などのハイパーリンクを始め、<em>痛い</em>などの強調や<strong>とても痛い！</strong>などのより強い強調、<cite>Wikipedia</cite>などの出典元の明示、<q>&quot;HTML5&quot; is widely used as a buzzword</q>などのインラインでの引用、<abbr title="World Wide Web">WWW</abbr>などの略語、<code>&lt;code&gt;</code>などのコード断片、<var>foo</var>などの変数、<samp>Hello World!</samp>などのプログラム出力、<kbd>Enter</kbd>などのキー入力、<mark>注意を向けさせたい</mark>などの単なるマーク、これらをあまり逸脱しない形でスタイルしています。</p>
+        <p>段落内では様々な意味づけを行うマークアップを使用しています。主に使うものは<a href="https://example.com">Example.com</a>などのハイパーリンクを始め、<em>痛い</em>などの強調や<strong>とても痛い！</strong>などのより強い強調、<cite>Wikipedia</cite>などの出典元の明示、<q>&quot;HTML5&quot; is widely used as a buzzword</q>などのインラインでの引用、<abbr title="World Wide Web">WWWなどの略語</abbr>、<code>&lt;code&gt;</code>などのコード断片、<var>foo</var>などの変数、<samp>Hello World!</samp>などのプログラム出力、<kbd>Enter</kbd>などのキー入力、<mark>注意を向けさせたい</mark>などの単なるマーク、これらをあまり逸脱しない形でスタイルしています。</p>
 
         <p>ただし、ハイパーリンクは多くの場合本文以外では下線を消しています。また、強調においては日本には斜体の文化は無いので太字としています。</p>
       </section>
@@ -625,7 +623,7 @@ $ &lt;kbd&gt;git push -u origin master&lt;/kbd&gt;
           <h1>マークアップ</h1>
 
           <ul>
-            <li><a href="https://html.spec.whatwg.org/multipage/">HTML Standard</a>の<abbr>HTML</abbr>文法を使ってUTF-8で書きます</li>
+            <li><a href="https://html.spec.whatwg.org/multipage/">HTML Standard</a>のHTML文法を使ってUTF-8で書きます</li>
             <li>インデントは半角空白を二文字使います</li>
             <li>要素名や属性名は全て小文字に統一します</li>
             <li>属性値を二重引用符で括ります</li>
