Add sign to last paragraph

--- a/src/css/test.html
+++ b/src/css/test.html
@@ -73,6 +73,10 @@
 
           <p>必要のないものを隠し、適切な位置で改行されるように調節しています。</p>
         </section>
+
+        <hr>
+
+        <p>このページ、およびこのページから参照されているCSSやJavaScriptファイルは最小化されていません。</p>
       </article>
 
       <section id="toc">
